[package]
name = "click_mute"
version = "0.1.0"
authors = ["Erkki Seppälä <erkki.seppala@vincit.fi>"]
edition = "2018"

[dependencies]
jack = "0.7"
evdev = "0.10.2"
libc = "0.2.81"
crossbeam-channel = "0.3.9"
egui = "0.12.0"
egui-miniquad = "0.4.0"
miniquad = "0.3.0-alpha.30"

# [lib]
# name = "mute_keyboard_plugin"
# crate-type = ["dylib"]
