[package]
name = "click_mute"
version = "0.1.0"
authors = ["Erkki Seppälä <erkki.seppala@vincit.fi>"]
edition = "2018"

[dependencies]
jack = "0.7"
evdev = "0.10.2"
libc = "0.2.81"
crossbeam-channel = "0.3.9"
egui = "0.12.0"
egui-miniquad = "0.4.0"
miniquad = "0.3.0-alpha.30"
toml = "0.5.8"
serde = "1.0.126"
serde_derive = "1.0.126"
thiserror = "1.0.22"
anyhow = "1.0.34"
atomicwrites = "0.3.0"
hound = "3.4.0"
rand = "0.8.3"
clap = "3.0.0-beta.2"
directories = "3.0"
epoll = "4.3.1"

# [lib]
# name = "mute_keyboard_plugin"
# crate-type = ["dylib"]

[build-dependencies]
vergen = "3"
